decrease resolution of images

--- a/services.html
+++ b/services.html
@@ -28,7 +28,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
- 
+
 
 </head>
 
@@ -76,7 +76,7 @@
         <!-- /.container -->
     </nav>
 
-    <div class="container">    
+    <div class="container">
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
@@ -88,63 +88,63 @@
                 </div>
                 <section class ="col-md-12 clearfix">
                     <div class="col-sm-4 text-center">
-                        <img class="img-responsive" src="../img/Anxiety.jpg" alt="Flower with Bee">
+                        <img class="img-responsive" src="./img/Anxiety.jpg" alt="Flower with Bee">
                         <h3>Anxiety</h3>
                         <p>When anxiety affects the quality of life of an adult or child, the earlier the intervention, the better the prognosis. Dr. Palcan provides assistance with panic attacks, phobias, social anxiety, OCD, and PTSD.</p>
                     </div>
                     <div class="col-sm-4 text-center">
-                        <img class="img-responsive" src="../img/Depression.jpg" alt="Crying Flower">
+                        <img class="img-responsive" src="img/Depression.jpg" alt="Crying Flower">
                         <h3>Mood Disorders/Depression</h3>
                         <p>Dr. Palcan assists people who experience depression due to grief/loss, medical issues, bipolar disorders and other life circumstances.</p>
                     </div>
                     <div class="col-sm-4 text-center">
-                        <img class="img-responsive" src="../img/Longterm Illness.jpg" alt="Archway">
+                        <img class="img-responsive" src="img/Longterm Illness.jpg" alt="Archway">
                         <h3>Coping with Medical Conditions</h3>
                         <p>The most common health problems in the United States like diabetes, heart disease, stroke, cancer, and arthritis and many other medical issues, require self management skills in order to live as fully as possible.</p>
                     </div>
                 </section>
                 <section class ="col-md-12 clearfix">
                     <div class="col-sm-4 text-center">
-                        <img class="img-responsive" src="../img/Family Therapy.jpg" alt="Family of Flowers">
+                        <img class="img-responsive" src="img/Family Therapy.jpg" alt="Family of Flowers">
                         <h3>Family Therapy</h3>
                         <p>Families seek counseling in order to generate understanding and solutions. Divorce, behavioral/academic issues, conflict, addictions, abuse, or the death or illness of a member often bring a family in for treatment with Dr. Palcan.</p>
                     </div>
                     <div class="col-sm-4 text-center">
-                        <img class="img-responsive" src="../img/Weight Loss.jpg" alt="Bridge">
+                        <img class="img-responsive" src="img/Weight Loss.jpg" alt="Bridge">
                         <h3>Weight Loss</h3>
                         <p>Along with the medical expertise of Dr. Figueroa, clients receive a comprehensive, psychological/medical treatment program that results in weight loss results.</p>
                     </div>
                     <div class="col-sm-4 text-center">
-                        <img class="img-responsive" src="../img/Smoking Cessation.jpg" alt="Clouds">
+                        <img class="img-responsive" src="img/Smoking Cessation.jpg" alt="Clouds">
                         <h3>Tobacco Cessation</h3>
                         <p>Nicotine addiction is one of the most challenging, if not, THE most challenging addictions to successfully eliminate. Dr. Palcan provides individual tobacco cessation treatment. Within four sessions, many clients are tobacco free.</p>
                     </div>
                 </section>
                 <section class ="col-md-12 clearfix">
                     <div class="col-sm-4 text-center">
-                        <img class="img-responsive" src="../img/Adolescence.jpg" alt="Young Flower">
+                        <img class="img-responsive" src="img/Adolescence.jpg" alt="Young Flower">
                         <h3>Adolescence</h3>
                         <p>Dr. Palcan builds a bridge between parents and youth, promoting understanding and communication that results in mutual respect. She works with adolescents who experience self-destructive behavior, lying, cheating, academic problems, negative attitudes, sibling or peer problems, violent relationships, drugs and alcohol, depression/anxiety, and sexuality issues.</p>
                     </div>
                     <div class="col-sm-4 text-center">
-                        <img class="img-responsive" src="../img/Couples Therapy.jpg" alt="Two Flowers">
+                        <img class="img-responsive" src="img/Couples Therapy.jpg" alt="Two Flowers">
                         <h3>Relationship Therapy</h3>
                         <p>All healthy relationships have their trials. Power struggles, communication problems, sexual dissatisfaction, parenting discrepancies, premarital counseling and infidelity are some of  the most common problems that Dr. Palcan provides valuable assistance for. Couples focus on their interaction as well as self-improvement and self-awareness.</p>
                     </div>
                     <div class="col-sm-4 text-center">
-                        <img class="img-responsive" src="../img/Men's Issues.jpg" alt="Bamboo">
+                        <img class="img-responsive" src="img/Men's Issues.jpg" alt="Bamboo">
                         <h3>Men's Issues</h3>
                         <p>Men and women often have different needs, different ways of manifesting psychological stress and different preferences for solutions. Dr. Palcan assists men with career problems, relationships, psychological stress, addictions, and much more. Her approach is more solution-focused and involves skill building, and  active problem solving.</p>
                     </div>
                 </section>
                 <section class ="col-md-12 clearfix">
                     <div class="col-sm-4 text-center">
-                        <img class="img-responsive" src="../img/Shared Medical Appointment.jpg" alt="Bush">
+                        <img class="img-responsive" src="img/Shared Medical Appointment.jpg" alt="Bush">
                         <h3>Shared medical appointment for chronic and acute medical conditions</h3>
                         <p>Drs. Palcan and Figueroa provide a dynamic and comprehensive group appointment that provides medical treatment  for both chronic and acute health conditions as well as the highest quality education and guidance in self management. comprehensive treatment  approach to address.</p>
                     </div>
                     <div class="col-sm-4 text-center">
-                        <img class="img-responsive" src="../img/Christian.jpg" alt="Waterfall">
+                        <img class="img-responsive" src="img/Christian.jpg" alt="Waterfall">
                         <h3>Christian Psychotherapy</h3>
                         <p> Dr. Palcan provides psychotherapy services to individuals across the entire dimension of faith, from those who are not spiritually interested to those who are devout practitioners within a religious communities. Dr. Palcan is  specifically trained in the area of Christian Psychotherapy. Individuals who prefer actively incorporating Christian values and  principles within their treatment, may request this specificity and find great value in Dr. Palcan’s treatment.</p>
                     </div>
@@ -165,9 +165,9 @@
             </div>
         </div>
     </footer>
-    <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>  
+    <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-   
+
 
 </body>
 
